--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Difficulties_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Difficulties_zh.json
@@ -3,17 +3,40 @@
     "SS2_DIFFICULTY_DELUGE_NAME": "洪水",
     "SS2_DIFFICULTY_DELUGE_DESC": "",
 
+    "SS2_DIFFICULTY_DELUGE1_NAME": "洪水+1",
+    "SS2_DIFFICULTY_DELUGE2_NAME": "洪水+2",
+    "SS2_DIFFICULTY_DELUGE3_NAME": "洪水+3",
+
     "SS2_DIFFICULTY_TEMPEST_NAME": "风暴",
     "SS2_DIFFICULTY_TEMPEST_DESC": "",
 
+    "SS2_DIFFICULTY_TEMPEST1_NAME": "风暴+1",
+    "SS2_DIFFICULTY_TEMPEST2_NAME": "风暴+2",
+    "SS2_DIFFICULTY_TEMPEST3_NAME": "风暴+3",
+
     "SS2_DIFFICULTY_CYCLONE_NAME": "飓风",
     "SS2_DIFFICULTY_CYCLONE_DESC": "",
+
+    "SS2_DIFFICULTY_CYCLONE1_NAME": "飓风+1",
+    "SS2_DIFFICULTY_CYCLONE2_NAME": "飓风+2",
+    "SS2_DIFFICULTY_CYCLONE3_NAME": "飓风+3",
 
     "SS2_DIFFICULTY_TYPHOON_NAME": "台风",
     "SS2_DIFFICULTY_TYPHOON_DESC": "最大的挑战，在这个噩梦般的世界中生存只是一种妄想。没有人能撑下去。<style=cStack>\n\n>玩家生命值再生速度：<style=cIsHealth>-40%</style>\n>难度调整： <style=cIsHealth>+75%</style>\n>怪物生成上限：<style=cIsHealth>+100%</style>\n>怪物生成速率：<style=cIsHealth>+25%</style>\n>金币和经验奖励：<style=cisHealth>-20%</style>",
 
     "SS2_DIFFICULTY_SUPERTYPHOON_NAME": "超强台风",
     "SS2_DIFFICULTY_SUPERTYPHOON_DESC": "",
+
+    "SS2_DIFFICULTY_SUPERTYPHOON1_NAME": "超强台风+1",
+    "SS2_DIFFICULTY_SUPERTYPHOON2_NAME": "超强台风+2",
+    "SS2_DIFFICULTY_SUPERTYPHOON3_NAME": "超强台风+3",
+
+    "SS2_DIFFICULTY_CATACLYSM_NAME": "灾变",
+
+    "SS2_DIFFICULTY_ARMAGEDDON_NAME": "末日",
+    "SS2_DIFFICULTY_ARMAGEDDON1_NAME": "末日+1",
+    "SS2_DIFFICULTY_ARMAGEDDON2_NAME": "末日+2",
+    "SS2_DIFFICULTY_ARMAGEDDON3_NAME": "末日+3",
 
     "SS2_SHRINE_ETHEREAL_NAME": "以太传送器",
     "SS2_SHRINE_ETHEREAL_CONTEXT": "升级传送器？",
