--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Elites_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Elites_zh.json
@@ -1,33 +1,39 @@
 {
-    "strings": {
-        "SS2_ELITE_DAZING": "炫目 {0}",
-        "SS2_EQUIP_AFFIXDAZING_NAME": "失焦",
-        "SS2_EQUIP_AFFIXDAZING_PICKUP": "成为炫目的象征。",
+  "strings": {
+    "SS2_ELITE_DAZING": "炫目 {0}",
+    "SS2_EQUIP_AFFIXDAZING_NAME": "失焦",
+    "SS2_EQUIP_AFFIXDAZING_PICKUP": "成为炫目的象征。",
 
-		"SS2_ELITE_POISONOUS": "剧毒 {0}",
-		"SS2_EQUIP_AFFIXPOISONOUS_NAME": "恶劣的解决方案",
-		"SS2_EQUIP_AFFIXPOISONOUS_PICKUP": "成为剧毒的象征。",
+    "SS2_ELITE_POISONOUS": "剧毒 {0}",
+    "SS2_EQUIP_AFFIXPOISONOUS_NAME": "恶劣的解决方案",
+    "SS2_EQUIP_AFFIXPOISONOUS_PICKUP": "成为剧毒的象征。",
 
-		"SS2_ELITE_KINETIC": "动能 {0}",
-		"SS2_EQUIP_AFFIXKINETIC_NAME": "无边压力",
-		"SS2_EQUIP_AFFIXKINETIC_PICKUP": "成为动能的象征。",
+    "SS2_ELITE_KINETIC": "动能 {0}",
+    "SS2_EQUIP_AFFIXKINETIC_NAME": "无边压力",
+    "SS2_EQUIP_AFFIXKINETIC_PICKUP": "成为动能的象征。",
 
-        "SS2_ELITE_ETHEREAL": "空灵 {0}",
-        "SS2_EQUIP_AFFIXETHEREAL_NAME": "不稳定残留物",
-        "SS2_EQUIP_AFFIXETHEREAL_PICKUP": "成为空灵的象征。",
+    "SS2_ELITE_MODIFIER_VOID": "堕罪 {0}",
+    "SS2_EQUIP_AFFIXVOID_NAME": "堕罪之枷锁",
+    "SS2_EQUIP_AFFIXVOID_PICKUP": "成为法令的门徒。",
 
-        "SS2_ELITE_VOID": "虚空 {0}",
-        "SS2_EQUIP_AFFIXVOID_NAME": "谴责的挽歌",
-        "SS2_EQUIP_AFFIXVOID_PICKUP": "成为虚空的象征。",
+    "SS2_ELITE_MODIFIER_GILDED": "镀金 {0}",
+    "SS2_ELITE_AFFIXGILDED_NAME": "",
+    "SS2_ELITE_AFFIXGILDED_PICKUP": "成为普罗维登斯的门徒。",
 
-        "SS2_ELITE_MODIFIER_ULTRA": "究极 {0}",
-        "SS2_ELITE_ULTRA_SUBTITLE": "否定结局。",
-        "SS2_EQUIP_AFFIXULTRA_NAME": "",
-        "SS2_EQUIP_AFFIXULTRA_PICKUP": "",
+    "SS2_ELITE_MODIFIER_ETHEREAL": "空灵 {0}",
+    "SS2_EQUIP_AFFIXETHEREAL_NAME": "不稳定残留物",
+    "SS2_EQUIP_AFFIXETHEREAL_PICKUP": "成为空灵的象征。",
 
-        "SS2_ELITE_MODIFIER_EMPYREAN": "至高 {0}",
-        "SS2_ELITE_EMPYREAN_SUBTITLE": "普罗维登斯的虔诚",
-        "SS2_EQUIP_AFFIXEMPYREAN_NAME": "和谐",
-        "SS2_EQUIP_AFFIXEMPYREAN_PICKUP": "成为存在的象征"
-    }
+    "SS2_ELITE_MODIFIER_ULTRA": "究极 {0}",
+    "SS2_ELITE_ULTRA_SUBTITLE": "否定结局。",
+    "SS2_EQUIP_AFFIXULTRA_NAME": "",
+    "SS2_EQUIP_AFFIXULTRA_PICKUP": "",
+
+    "SS2_ELITE_MODIFIER_EMPYREAN": "至高{0} {1}",
+    "SS2_ELITE_EMPYREAN_SUBTITLE": "琼泥V的虔诚预见",
+    "SS2_EQUIP_AFFIXEMPYREAN_NAME": "和谐",
+    "SS2_EQUIP_AFFIXEMPYREAN_PICKUP": "成为存在的象征",
+
+    "SS2_ELITE_MODIFIER_STORM": "风暴降生 {0}"
+  }
 }
