--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Interactables_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Interactables_zh.json
@@ -2,16 +2,16 @@
   "strings": {
     "SS2_SHRINE_ETHEREAL_NAME": "以太终端",
     "SS2_SHRINE_ETHEREAL_CONTEXT": "启动以太终端……？\n(这将永久增加难度！)",
-    "SS2_ETHEREAL_WARNING2":  "这将永久增加难度！你确定吗？",
+    "SS2_ETHEREAL_WARNING2": "这将永久增加难度！你确定吗？",
     "SS2_SHRINE_ETHEREAL_WARN_MESSAGE": "{0} 激活了以太终端……",
-    "SS2_SHRINE_ETHEREAL_WARN_MESSAGE_2P":  "你已激活了以太终端……",
-    "SS2_SHRINE_ETHEREAL_USE_MESSAGE":  "{0} 激活了以太终端……",
+    "SS2_SHRINE_ETHEREAL_WARN_MESSAGE_2P": "你已激活了以太终端……",
+    "SS2_SHRINE_ETHEREAL_USE_MESSAGE": "{0} 激活了以太终端……",
     "SS2_SHRINE_ETHEREAL_USE_MESSAGE_2P": "你已激活了以太终端……",
     "SS2_ETHEREAL_SS2_DIFFICULTY_WARNING": "<style=cDeath>这颗星球的加倍奉还……</style>",
 
     "SS2_PORTAL_VOIDSHOP_APPEAR": "一个神秘的传送门出现在某处..",
-    "SS2_PORTAL_VOIDSHOP_CONTEXT":  "进入神秘传送门",
-    
+    "SS2_PORTAL_VOIDSHOP_CONTEXT": "进入神秘传送门",
+
     "SS2_SHRINE_ETHEREAL_HINT_NEWTSPEECH": "店主低声说：\"{1}\"",
     "SS2_SHRINE_ETHEREAL_HINT_BLACKBEACH": "俯视着小岛。",
     "SS2_SHRINE_ETHEREAL_HINT_BLACKBEACH2": "隐藏在柱子之间。",
@@ -25,8 +25,8 @@
     "SS2_SHRINE_ETHEREAL_HINT_DAMPCAVESIMPLE": "看门人附近。",
     "SS2_SHRINE_ETHEREAL_HINT_SHIPGRAVEYARD": "深谷中。",
     "SS2_SHRINE_ETHEREAL_HINT_ROOTJUNGLE": "伸出来的根。",
-    "SS2_SHRINE_ETHEREAL_HINT_SKYMEADOW": "远离月球。", 
-    
+    "SS2_SHRINE_ETHEREAL_HINT_SKYMEADOW": "远离月球。",
+
     "SS2_INTERACTABLE_DROPPOD_NAME": "逃生舱",
     "SS2_INTERACTABLE_DROPPOD_CONTEXT": "打开舱门?",
 
@@ -38,6 +38,10 @@
     "SS2_DRONE_SHOCK_INTERACTABLE_CONTEXT": "维修震荡无人机",
 
     "SS2_DRONE_CLONE_INTERACTABLE_NAME": "损坏的复制无人机",
-    "SS2_DRONE_CLONE_INTERACTABLE_CONTEXT": "维修复制无人机"
+    "SS2_DRONE_CLONE_INTERACTABLE_CONTEXT": "维修复制无人机",
+
+    "SS2_VOIDROCK_NAME": "神秘的手铐",
+    "SS2_VOIDROCK_CONTEXT": "获得神秘的手铐",
+    "SS2_VOIDROCK_USED_NAME": "空土堆"
   }
 }
