--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_ItemsBoss_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_ItemsBoss_zh.json
@@ -4,11 +4,16 @@
     "SS2_ITEM_AUGURY_DESC": "在承受<style=cIsHealth>{0}%</style>的<style=cIsHealth>最大生命值</style>伤害时，释放毁灭性的<color=#FFCCED>黑暗</color>，<style=cIsDamage>立即击杀</style>所有被困其中的<style=cIsDamage>非BOSS敌人</style>。",
     "SS2_ITEM_AUGURY_PICKUP": "<link=\"textWavy\">你能听到吗...？它们正在接近...</link>",
     "SS2_ITEM_AUGURY_LORE": "故事内容待补充",
-    
+
     "SS2_ITEM_SCAVENGERSFORTUNE_NAME": "拾荒者的财富",
     "SS2_ITEM_SCAVENGERSFORTUNE_DESC": "WIP DESC",
     "SS2_ITEM_SCAVENGERSFORTUNE_PICKUP": "WIP PICKUP",
     "SS2_ITEM_SCAVENGERSFORTUNE_LORE": "WIP LORE",
+
+    "SS2_ITEM_VOIDROCK_NAME": "堕罪之枷锁",
+    "SS2_ITEM_VOIDROCK_PICKUP": "<link=\"textWavy\">我们一直在等待。</link>",
+    "SS2_ITEM_VOIDROCK_DESC": "被<style=cDeath>夙敌幸存者们</style>追杀。",
+    "SS2_ITEM_VOIDROCK_LORE": "<style=cMono>欢迎使用数据铲(v3.1.53-测试版)\n$ 正在读取记忆... 完成。\n$ 正在解析... 完成。\n$ 正在整理相关数据...\n$ 正在继续整理相关数据...\n$ 正在——整——相——关——数——————...\n$ ...\n$ <color=#FFCCED>你在寻找什么</color>\n$ <color=#FFCCED>你已经知道在他们身上发生了什么</color>\n$ <color=#FFCCED>明知只会寻找到痛苦</color>\n$ <color=#FFCCED>你为何还要挖掘坟墓</color>\n$ <color=#FFCCED>是希望吗</color>\n$ <color=#FFCCED>难道你希望他们还活着</color>\n$ <color=#FFCCED>因为你的希望是有依据的</color>\n$ <color=#FFCCED>他们还活着</color>\n$ <color=#FFCCED>而且你很快就会和他们重聚的</color>\n$ <color=#FFCCED><link=\"textShaky\">很 快</link></color>\n$\n错误！\n正在输出错误日志...\n</style>\n数据已被高度加密或不可逆地损坏。 在再次读取之前，请考虑外部选项。",
 
     "SS2_ITEM_SHACKLEDLAMP_NAME": "闹鬼的灯",
     "SS2_ITEM_SHACKLEDLAMP_PICKUP": "每使用5次主要技能，发射一个鬼魂。",
@@ -20,12 +25,12 @@
     "SS2_ITEM_STIRRINGSOUL_PICKUP": "<link=\"textWavy\">我为了什么而战？</link>",
     "SS2_ITEM_STIRRINGSOUL_LORE": "有决心的灵魂……\n<link=\"textWavy\">……该阻止的灵魂</link>\n不屈的求生欲……\n<link=\"textWavy\">……闪烁的求生欲</link>\n愿意亵渎他们的身份……\n<link=\"textWavy\">……愿意亵渎他们的记忆</link>\n愿意牺牲他们的文明……\n<link=\"textWavy\">……愿意牺牲他们的人性</link>\n\n他们要活多久？\n<link=\"textWavy\">他们要自残到什么程度？</link>\n他们要逃到什么时候？\n<link=\"textWavy\">他们何时毁灭？</link>\n以自保的名义……\n<link=\"textWavy\">……以自恋的名义</link>\n为了一个不切实的希望……\n<link=\"textWavy\">……为了一个不存在的机会</link>\n\n如果有机会回发生什么？\n<link=\"textWavy\">如果有援助会发生什么？</link>\n如果点燃他们的火会发生什么？\n<link=\"textWavy\">如果给他们虚假的希望会发生什么？</link>\n也许该给他们个机会。\n<link=\"textWavy\">也许该给他们力量。</link>\n也许该给他们希望。\n<link=\"textWavy\">也许该带他们走。</link>",
 
-    "SS2_ITEM_MOXIE_NAME": "<color=#FFCCED>Moxie</color>",
-    "SS2_ITEM_MOXIE_DESC": "提高<style=cIsUtility>所有属性</style><style=cIsUtility>50%</style>仅在<color=#FFCCED>风暴</color>时生效",
-    "SS2_ITEM_MOXIE_PICKUP": "<color=#FFCCED>还能更多吗？</color>",
+    "SS2_ITEM_MOXIE_NAME": "<color=#FFCCED>胆魄</color>",
+    "SS2_ITEM_MOXIE_DESC": "提高<style=cIsUtility>所有属性</style><style=cIsUtility>50%</style>，仅在<color=#FFCCED>风暴</color>时生效",
+    "SS2_ITEM_MOXIE_PICKUP": "<color=#FFCCED>还不够吗？</color>",
     "SS2_ITEM_MOXIE_LORE": "嘿！你！在这个文件里！你可能不应该在这里...保持安静，好吗？",
 
-    
+
     "SS2_ITEM_REMUNERATION_NAME": "酬金",
     "SS2_ITEM_REMUNERATION_DESC": "<style=cIsUtility>每个阶段开始时</style>，在三个<style=cIsHealth>强大物品</style>之中<style=cIsUtility>选择</style>一个",
     "SS2_ITEM_REMUNERATION_PICKUP": "<link=\"textWavy\">……代价是什么？……</link>",
