--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_ItemsT2_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_ItemsT2_zh.json
@@ -1,48 +1,53 @@
 {
 	"strings": {
-		"SS2_ITEM_BLOODTESTER_NAME": "Broken Blood Tester",
-		"SS2_ITEM_BLOODTESTER_DESC": "Gain <style=cIsUtility>5 gold</style> for every <style=cIsHealing>20% of your health</style> you heal. <style=cStack>Gold gained scales with stacks, stages cleared, and max health.</style>",
-		"SS2_ITEM_BLOODTESTER_PICKUP": "Gain money on healing.",
-		"SS2_ITEM_BLOODTESTER_LORE": "Return: Broken Blood Tester\nTracking Number: 288*****\nEstimated Delivery: 06/17/2056\nShipping Method: Priority\nShipping Address: Dionysus Pharmaceuticals Headquarters, Pluto\nShipping Details:\n\nWe're going to need this one repaired before it does our company more harm than good. This thing kept giving us the wrong results every time our MED-E used it. Not only does it clog our workflow, we wind up having to pay out of pocket to the patients since we wrongfully diagnose them, and stick them with needles needlessly. And we can't claim it as the patient being wrong since it's all immediately backed up to the servers. We can't keep shelling out this kind of money, or we'll be bankrupt by next quarter.\n",
+		"SS2_ITEM_CRYPTICSOURCE_NAME": "奥秘之源",
+		"SS2_ITEM_CRYPTICSOURCE_DESC": "结束奔跑时, 在<style=cIsDamage>{0}米</style><style=cStack>(每层+{1}米)</style>半径内释放<style=cIsDamage>能量爆发</style>造成<style=cIsDamage>{2}%</style><style=cStack>(每层+{2}%)</style>基础伤害。",
+		"SS2_ITEM_CRYPTICSOURCE_PICKUP": "冲刺时积蓄能量，停止时释放伤害性的能量爆发。",
+		"SS2_ITEM_CRYPTICSOURCE_LORE": "Awesome Lore",
 
 		"SS2_ITEM_FIELDACCELERATOR_NAME": "场加速器",
-		"SS2_ITEM_FIELDACCELERATOR_DESC": "在传送器区域中击杀敌人增加<style=cIsUtility>+{0}%</style> <style=cStack>(每层+{0}%)</style> <style=cIsUtility>充能进度</style>。",
-		"SS2_ITEM_FIELDACCELERATOR_PICKUP": "击杀敌人减少传送器充能时间。",
+		"SS2_ITEM_FIELDACCELERATOR_DESC": "在传送器区域中击杀敌人增加<style=cIsUtility>+{0}%</style> <style=cStack>(每层+{0}%)</style> <style=cIsUtility>充能进度</style>，击杀Boss增加<style=cIsUtility>20%</style><style=cStack>(每层+20%)</style>的传送器半径",
+		"SS2_ITEM_FIELDACCELERATOR_PICKUP": "击杀敌人可以减少传送器的充能时间，并增加传送器的范围。",
 		"SS2_ITEM_FIELDACCELERATOR_LORE": "<style=cMono>//--来自UES[安旅]14551A室的自动转录--//</style>\n\n“你拿到设备了？”\n\n“对，在这。”\n\n“运转正常？”\n\n“嗯，很完美。”\n\n“好，记住了，别让别人知道这件事。”\n\n“对对，我知道。那些……祭坛，对[已编校]非常有用。要是能成功分析它们的话，复制一个应该不难。绝对是个重大科学突破。”\n\n“好，保持低调，去分析吧，在有人起疑心前搞完。”\n\n“会的，再次感谢你的帮助。”\n\n“没关系……只要钱到位。”\n\n“呃，关于这个……”",
 
-		"SS2_ITEM_HOTTESTSAUCE_NAME": "Hottest Sauce",
-		"SS2_ITEM_HOTTESTSAUCE_DESC": "Activating your equipment <style=cIsDamage>ignites</style> enemies within <style=cIsDamage>{0}m</style> for <style=cIsDamage>{1}</style> seconds, dealing <style=cIsDamage>150% base damage</style> plus <style=cIsDamage>100% damage per second</style> <style=cStack>(+50% per stack)</style>.",
-		"SS2_ITEM_HOTTESTSAUCE_PICKUP": "Activating your equipment ignites nearby enemies.",
-		"SS2_ITEM_HOTTESTSAUCE_LORE": "<style=cMono>//--Auto-Transcription from room K3 (Kitchen, 3rd Floor) of Kaymar Hotel--//</style>\n\nA tall, thin man walks into the room, holding a large cardboard box. \"Hey, CHEF. How's it going?\" He sets the box on the counter. \"Alright, we've got a bunch of new sauces you'll have to get accustomed with. I'll walk you through them now, if you don't mind.\" The CHEF bot gives him its attention, but continues to work.\n\nThe man proceeds down the rows of various colored bottles, explaining to the CHEF their names, flavors, and uses in cooking. Eventually, he stops at a red-colored bottle, and hesitates briefly.\n\n\"...Okay, now. This bottle? It's unlabelled for a reason. If you get a meal order stating that you use \"<style=cDeath>Hottest Sauce</style>\" on it, you go ahead and use this bottle. But do NOT use it under ANY OTHER CIRCUMSTANCES. I know sometimes you need to improvise to finish a dish, but you should NEVER use this bottle if you're doing that. Do you understand?\"\n\nThe CHEF bot, still working, nods affirmatively.\n\n\"Good. I expect great things from you, CHEF.\"\n\nThe CHEF bot nods once again, and briefly pauses its work to put the bottles in the appropriate locations.\n\n\"...Oh, and also?\"\n\nThe CHEF bot pauses to give its attention to the man once more.\n\n\"Please, don't break that bottle. I know you're a robot and all, but I also know that accidents happen, and that particular accident might leave a hole in the floor.\"\n\nThe CHEF bot gazes at the bottle briefly, before carefully setting it in the back of the cupboard with the rest of the sauces.",
+		"SS2_ITEM_HOTTESTSAUCE_NAME": "灼魂辣酱",
+		"SS2_ITEM_HOTTESTSAUCE_DESC": "激活你的装备时，会<style=cIsDamage>点燃</style><style=cIsDamage>{0}米</style>范围内的敌人，持续<style=cIsDamage>{1}</style>秒，造成<style=cIsDamage>150%基础伤害</style>并附加<style=cIsDamage>每秒100%的伤害</style><style=cStack>(每层+50%)</style>。",
+		"SS2_ITEM_HOTTESTSAUCE_PICKUP": "激活装备时点燃附近敌人。",
+		"SS2_ITEM_HOTTESTSAUCE_LORE": "<style=cMono>//--来自凯玛酒店三楼K3房间（厨房）的自动转录--//</style>\\n\\n一个高瘦的男人走进房间，手里拿着一个大纸箱。“嘿，CHEF，怎么样？”他把箱子放在柜台上。“好了，这里有一堆新的酱料，你得熟悉一下。如果你不介意的话，我现在给你介绍一下。”CHEF机器人把注意力转向他，但仍在继续工作。\\n\\n男人依次指着各种颜色的瓶子，向CHEF解释它们的名字、口味以及在烹饪中的用法。最终，他在一个红色的瓶子前停下，并稍作犹豫。\\n\\n\\\"……好了，这瓶酱？它没有标签是有原因的。如果有一道菜的订单要求使用‘<style=cDeath>灼魂辣酱</style>’， 你就用这瓶。但 在 任 何 其 他 情 况 下 都 不 要 用。 我知道有时候你需要即兴发挥来完成一道菜，但倘若你这样做了，你也绝 对不能用这瓶酱，明白吗？\\\"\\n\\nCHEF机器人继续工作，同时肯定地点了点头。\\n\\n\\“很好，我对你期望很高，CHEF。”\\n\\n“很好，我对你期望很高，CHEF。”\\n\\n“……哦，还有一件事。”\\n\\nCHEF机器人停下来，再次看向那个男人。\\n\\n“拜托，别打碎这瓶酱。我知道你是个机器人，但我也知道意外总是会发生，而这次意外可能会在地板上留下一个洞。”\\n\\nCHEF机器人注视着那瓶酱，然后小心翼翼地将它与其他酱料一起放在橱柜的最里面。",
 
 		"SS2_ITEM_HUNTERSSIGIL_NAME": "猎人印记",
-		"SS2_ITEM_HUNTERSSIGIL_DESC": "<style=cIsUtility>站立不动</style>最少1秒后，获得<style=cIsUtility>{0}</style><style=cStack>(每层+{1})</style>护甲且提高<style=cIsDamage>{2}%</style><style=cStack>(每层+{3}%)</style>的伤害。持续<style=cIsUtility>{4}</style> <style=cStack>(每层+{5})</style><style=cIsUtility>秒</style>。",
+		"SS2_ITEM_HUNTERSSIGIL_DESC": "<style=cIsUtility>站立不动</style>最少1秒后，创造一片半径为<style=cIsUtility>{0}米的区域</style>提供<style=cIsUtility>{1}</style>护甲<style=cStack>(每层+{2})</style>和<style=cIsDamage>{3}%</style>额外伤害<style=cStack>(每层+{4}%)</style>。<style=cIsUtility>该区域会持续存在，直到你离开它的范围</style>。",
 		"SS2_ITEM_HUNTERSSIGIL_PICKUP": "站立不动获得额外的护甲与伤害加成。",
 		"SS2_ITEM_HUNTERSSIGIL_LORE": "<style=cMono>完整音频转录自便携录音机。\r\n\r\n正在打印……</style>\r\n\r\n\"你认为它们会上钩吗？\"\n\"他们会的，它们没有其他选择，不像我们。\"\n\"我还是觉得这样消耗食物风险太大了。\"\n\"我们不这么做绝对撑不过一个周。\"\n\"好吧……只是，别用太多了。\"\n\"活着最重要，伙计。\"\n\"...\"\n\"它们来了！\"\n\"好，搞一个然后我们快走。\"\n\"还没好……\"\n\"什么？你再等只是在浪费食物！\"\n\"再等一下……\"\n\"开枪吧伙计！我们就剩这点儿了！\"\n\"马上就好！\"\n\"你他妈的快开枪！\"\n\"马上了马上了！\"\n\"他妈的开枪！！要不就把枪给我！\"\n\"……\"\n\"快！给！我！\"\n\"嘿，小心……\"\n\n<style=cMono>录音结束</style>\n",
 
 		"SS2_ITEM_JETBOOTS_NAME": "原型火箭靴",
-		"SS2_ITEM_JETBOOTS_DESC": "<style=cIsUtility>跳跃</style>时产生<style=cIsUtility>减速爆炸</style>，造成<style=cIsDamage>{2}%</style> <style=cStack>(每层+{3}%)</style>伤害。爆炸半径为<style=cIsDamage>{0}米</style> <style=cStack>(每层+{1}米)</style>。",
-		"SS2_ITEM_JETBOOTS_PICKUP": "跳跃时引爆！",
+		"SS2_ITEM_JETBOOTS_DESC": "获得<style=cIsUtility>一次额外跳跃次数</style>，可<style=cIsDamage>点燃</style><style=cIsDamage>{1}米</style><style=cStack>(每层+{2}米)</style>半径内的敌人造成<style=cIsDamage>{0}%</style>基础伤害，落地后<style=cIsUtility>{3}</style>秒重新充能",
+		"SS2_ITEM_JETBOOTS_PICKUP": "获得爆炸跳跃！",
 		"SS2_ITEM_JETBOOTS_LORE": "火神金属作坊尸检记录\n\n位置：火星，火神金属材料作坊\n位置状态：内部完全被火摧毁。\n伤亡：作坊主。\n现场报告\n\n我以为火灾的原因是熔炉或是烟头。就像其他的案例一样。作坊中有一堆旧的剑、盔甲、农具之类的器件。死者似乎是一个手工爱好者，后场有一些比较不常见的东西。\n\n其中不少是电动机和金属。他最初似乎在练习制作钟表。但他很快转向了需要发动机的项目，如老式割草机、摩托车和发电机。他最终开始研究推进系统。小型飞机、直升机、锈迹斑斑的老式喷气背包。似乎他还有未完工的项目，我们找到了这个装置。\n\n他绝对是有点天赋，他正在从零开始造一双火箭靴。火箭靴这种产品从未规模化生产过，在相同推力的情况下喷气背包往往更稳定更可靠。他应该也意识到了这点，这个靴子被造的格外坚固以提供保护，他也试图增加推力提高效率。结果就是能量累积，从他的脚下喷了出来。他的创造力（和欠缺的安全意识）让他送了命。\n\n周围地区没有受到影响，所以该建筑预计很快就能被翻修。靴子已经收缴送去研究并报废。作坊内的其余物品已经寄送给受害者的家属。\n\n我的报告到此结束。\n",
 
-		"SS2_ITEM_STRANGECAN_NAME": "Strange Can",
-		"SS2_ITEM_STRANGECAN_DESC": "<style=cIsDamage>8.5%</style> <style=cStack>(+5% per stack)</style> chance to <style=cIsDamage>intoxicate</style> enemies dealing <style=cIsDamage>350% damage over time</style> and <style=cIsUtility>disorienting them</style>.",
-		"SS2_ITEM_STRANGECAN_PICKUP": "Chance to intoxicate enemies, causing damage over time.",
-		"SS2_ITEM_STRANGECAN_LORE": "Two figures sit, one shivering among a sea of rubble in a frozen burrow. The only lights given are the small remains of a fire, and old sparking wires. Barely any protection against the biting cold.\n\n\"Hey...\" He looks up, distantly hopeful. \"Do you think we'll ever make it off this rock?\"\n\n\"Hard to say.\" She takes a bite of a ration she found.\n\n\"Well there has to be something we've overlooked, right? Some method we just haven't thought of yet?\" He stands up, and begins pacing around anxiously.\n\n\"Could be.\" Another bite.\n\n\"Maybe there's some wreckage with working parts we just haven't found yet, or a problem in the current ones we could fix?\" A shine returning to his eyes, getting himself more hopeful and excited.\n\n\"Definitely possible.\" Another bite.\n\nHe stops as a disgusted look crosses his face. \"Ugh, could you please help me think of something instead of just eating?\"\n\n\"I wouldn't worry about it.\" Another bite.\n\nHis disgust quickly gives way to blatant frustration and anger. \"Why not?! Don't you want to get out of here?!\"\n\nShe sighs, and runs a hand through her hair. \"Well sure. But that doesn't mean we've gotta stress over every little thing. We're alive, ain't we? We're lucky we have that much.\"\n\n\"Well... I suppose you're right... It'd be bad to get worked up right now...\" His expression relaxes as he looks back to the ground.\n\n\"See? Just sit down, relax, and let my old stash warm you up.\" Another bite, as she passes the can.\n",
-
-		"SS2_ITEM_WATCHMETRONOME_NAME": "手表节拍器",
-		"SS2_ITEM_WATCHMETRONOME_DESC": "<style=cIsUtility>不冲刺时</style>逐渐积累起最多<style=cIsUtility>{0}</style> <style=cStack>(每层+{0})</style> <style=cIsUtility>层充能</style>，激活时你的<style=cIsUtility>移动速度</style>提高，提高量最多为<style=cIsUtility>{1}%</style>。移动速度的加成将在你<style=cIsUtility>冲刺时</style>逐渐减少。",
-		"SS2_ITEM_WATCHMETRONOME_PICKUP": "在不冲刺时为高速移动充能",
-		"SS2_ITEM_WATCHMETRONOME_LORE": "运单：损坏的手表式节拍器\r\n单号：88******\r\n预计送达时间：04/14/2056\r\n运送方式：优先\r\n送货地址：金星，阿拉巴马，天景大道3号\r\n运单详情：嗨，这就是我跟您说过的那个节拍器。显然这玩意儿已经不正常好几个周了，我和孩子们都没法录音了，这个节拍器总是越走越快。我希望能快点修好，我听说入耳式节拍器带太久耳朵会受伤的。哦，还请小心处理，这个节拍器是我爸爸送我的礼物，对我来说意义重大。提前感谢您。\n",
+		"SS2_ITEM_LIGHTNINGONKILL_NAME": "僧帽水母",
+		"SS2_ITEM_LIGHTNINGONKILL_DESC": "击杀敌人后，对<style=cIsDamage>{3}米</style><style=cStack>(每层+{4}米)</style>半径内最多<style=cIsDamage>{1}</style><style=cStack>(每层+{2})</style>个目标释放<style=cIsDamage>{0}%基础伤害</style>的<style=cIsDamage>电击</style>。",
+		"SS2_ITEM_LIGHTNINGONKILL_PICKUP": "击杀敌人时释放电击。",
+		"SS2_ITEM_LIGHTNINGONKILL_LORE": "cute care instructions or something",
 
 		"SS2_ITEM_LOWQUALITYSPEAKERS_NAME": "低质量音响",
-		"SS2_ITEM_LOWQUALITYSPEAKERS_DESC": "获得与<style=cIsHealth>已损失生命值的百分比</style>成正比的<style=cIsUtility>移动速度加成</style>，<style=cIsHealth>剩余生命值不足10%时</style>有最大<style=cIsUtility>移动速度</style>加成<style=cIsUtility>{0}%</style> <style=cStack>(每层+{0}%)</style> 。",
-		"SS2_ITEM_LOWQUALITYSPEAKERS_PICKUP": "生命值较低时移动速度加快。",
-		"SS2_ITEM_LOWQUALITYSPEAKERS_LORE": "<style=cIsHealth>开发中，请阅读下文并在需要时反馈问题\n\n</style><style=cStack>模组开发者的话：我觉得这个物品1：1还原不怎么样。所以我把提高的移动速度改成和损失生命值成正比了。而不是在激活老旧战争潜行工具的那段短时间起作用，现在这版怎样？</style>",
+		"SS2_ITEM_LOWQUALITYSPEAKERS_DESC": "受到伤害时有几率<style=cIsDamage>眩晕</style><style=cIsDamage>{0}米</style><style=cStack>(每层+{1}米)</style>半径内的敌人。基础几率为<style=cIsDamage>10%</style>，并在<style=cIsHealth>生命值较低时</style>增加。",
+		"SS2_ITEM_LOWQUALITYSPEAKERS_PICKUP": "受到伤害时眩晕附近的敌人。",
+		"SS2_ITEM_LOWQUALITYSPEAKERS_LORE": "退件：A-AMP 25瓦多功能音响\n运单号：629********\n预计送达时间：2055年3月14日\n运送方式：优先\n送货地址：地球，双子城，安塞姆巷444号\n退货原因：\n\n抱歉打扰您，伙计。 但当我打开包装并插上电源测试时，音频听起来有些……模糊？有噪音？难以形容。 我猜它可能是在运输过程中受到了损坏， 幸好我买了保修。\n\n退款：\n退货：X",
 
-		"SS2_ITEM_CRYPTICSOURCE_NAME": "Cryptic Source",
-		"SS2_ITEM_CRYPTICSOURCE_DESC": "Upon <style=cIsDamage>sprinting</style>, unleash a <style=cIsDamage>burst of energy</style> that damages enemies for <style=cIsDamage>{0}%</style> <style=cStack>(+{1}% per stack)</style> damage.",
-		"SS2_ITEM_CRYPTICSOURCE_PICKUP": "Sprinting unleashes a damaging burst of energy.",
-		"SS2_ITEM_CRYPTICSOURCE_LORE": "Awesome Lore"
+		"SS2_ITEM_STRANGECAN_NAME": "奇怪的罐头",
+		"SS2_ITEM_STRANGECAN_DESC": "命中时有<style=cIsDamage>{0}%</style><style=cStack>(每层+{1}%)</style>几率使敌人<style=cIsDamage>中毒</style>，每秒造成<style=cIsDamage>{2}%伤害</style>。<style=cIsDamage>中毒</style>可叠加至10层。击杀敌人会根据其<style=cIsDamage>中毒</style>层数<style=cIsHealing>恢复生命值</style>，每层<style=cIsHealing>恢复</style><style=cIsHealing>{3}</style><style=cStack>(每层+{4})</style><style=cIsHealing>生命值</style>。",
+		"SS2_ITEM_STRANGECAN_PICKUP": "有机会使敌人中毒，造成持续伤害。击杀中毒的敌人会治疗你。",
+		"SS2_ITEM_STRANGECAN_LORE": "两个人坐在冰冷的洞穴里，其中一个在废墟中瑟瑟发抖。唯一的光源是微弱的火光和闪烁的旧电线，几乎没有任何抵御刺骨寒冷的措施。\n\n\"嘿……\" 他抬起头，眼中带着渺茫的希望。 \"你觉得我们会离开这个星球吗？\"\n\n\"难说。\" 她咬了一口找到的口粮。\n\n\"好吧，一定有什么东西被我们忽略了，对吧？一些我们还未想到的方法？\" 他站起身，焦虑地开始踱步。\n\n\"也许吧。\" 又是一口。\n\n\"也许有些残骸里有我们还没发现的可用零件，或者是现有的部件存在我们可以修复的问题？\" 他的眼中闪过一丝光彩，变得更加富有希望，精神振奋。\n\n\"一定有可能。\" 又是一口。\n\n他停了下来，脸上露出厌恶的表情。 \"额，能不能帮我想点什么，而不是只是吃东西？\"\n\n\"我倒是不太担心。\" 又是一口。\n\n他的厌恶很快转变为了明显的挫败和愤怒。\"为什么不？！难道你不想离开这里吗？！\"\n\n她叹了口气，用手撩了下头发。\"当然想。但这并不意味着我们要对每件小事都感到压力。我们还活着，不是吗？这就已经很幸运了。\"\n\n\"嗯……你说得对……现在这么激动可不好……\"他看着地面，表情放松了下来。\n\n\"看吧？坐下，放松，让我的储备粮来温暖你。\"她递过罐头时，又咬了一口。\n",
+
+		"SS2_ITEM_WATCHMETRONOME_NAME": "手表节拍器",
+		"SS2_ITEM_WATCHMETRONOME_DESC": "不奔跑时, 充能使<style=cIsUtility>奔跑速度</style>提升<style=cIsUtility>{0}%</style>。奔跑时，速度提升效果在<style=cIsUtility>{1}秒</style><style=cStack>(每层+{2}秒)</style>内逐渐衰减。",
+		"SS2_ITEM_WATCHMETRONOME_PICKUP": "在不奔跑时为高速移动充能",
+		"SS2_ITEM_WATCHMETRONOME_LORE": "运单：损坏的手表式节拍器\r\n单号：88******\r\n预计送达时间：04/14/2056\r\n运送方式：优先\r\n送货地址：金星，阿拉巴马，天景大道3号\r\n运单详情：嗨，这就是我跟您说过的那个节拍器。显然这玩意儿已经不正常好几个周了，我和孩子们都没法录音了，这个节拍器总是越走越快。我希望能快点修好，我听说入耳式节拍器带太久耳朵会受伤的。哦，还请小心处理，这个节拍器是我爸爸送我的礼物，对我来说意义重大。提前感谢您。\n",
+
+		"SS2_ITEM_RAINBOWROOT_NAME": "虹之根源",
+		"SS2_ITEM_RAINBOWROOT_DESC": "获得<style=cIsUtility>{0}点护甲</style>。受到伤害时，将<style=cIsUtility>被抵挡伤害</style>的{1}%<style=cStack>(每层+{2}%)</style>转化为<style=cIsUtility>屏障</style>。",
+		"SS2_ITEM_RAINBOWROOT_PICKUP": "部分被抵挡的伤害将转化为屏障。",
+		"SS2_ITEM_RAINBOWROOT_LORE": "什么样的彩虹会从这样的雨中出现？"
 	}
 }
