--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_NonSurvivorBodies_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_NonSurvivorBodies_zh.json
@@ -1,44 +1,52 @@
 {
-    "strings" : {
-        "SS2_DROIDDRONE_NAME" : "安保无人机",
-        
-        "SS2_DRONE_CLONE_NAME": "复制无人机",
+  "strings": {
+    "SS2_DROIDDRONE_NAME": "安保无人机",
 
-        "SS2_DRONE_SHOCK_NAME": "震荡无人机",
+    "SS2_DRONE_CLONE_NAME": "复制无人机",
 
-        "SS2_TRADER_BODY_NAME": "褪色的Zanzan",
-        "SS2_TRADER_BODY_SUBTITLE": "蒙面谈判者",
-        "SS2_TRADER_CONTEXT": "讨价还价？",
+    "SS2_DRONE_SHOCK_NAME": "震荡无人机",
 
-        "SS2_TRADER_POPUP_TEXT": "向交易商提供物品？",
-        "SS2_TRADER_WANT_TEXT": "交易商咕哝着： \"<i><link=\"textWavy\">",
-        "SS2_TRADER_WANT2_TEXT": "..</link></i>\"",
+    "SS2_TRADER_BODY_NAME": "褪色的Zanzan",
+    "SS2_TRADER_BODY_SUBTITLE": "蒙面谈判者",
+    "SS2_TRADER_CONTEXT": "讨价还价？",
 
-        "SS2_TRADER_QUALITY_BESTEST": "<b>心之所向</b>",
-        "SS2_TRADER_QUALITY_BEST": "<b>优秀</b>",
-        "SS2_TRADER_QUALITY_GREAT": "<b>很好</b>",
-        "SS2_TRADER_QUALITY_GOOD": "<b>好</b>",
-        "SS2_TRADER_QUALITY_MODERATE": "<b>不错</b>",
-        "SS2_TRADER_QUALITY_POOR": "<b>差</b>",
-        "SS2_TRADER_QUALITY_WORTHLESS": "<b>毫无价值</b>",
+    "SS2_TRADER_POPUP_TEXT": "向交易商提供物品？",
+    "SS2_TRADER_WANT_TEXT": "交易商咕哝着： \"<i><link=\"textWavy\">",
+    "SS2_TRADER_WANT2_TEXT": "..</link></i>\"",
 
-        "SS2_LAMPBOSS_BODY_NAME": "远行者",
-        "SS2_LAMPBOSS_BODY_SUBTITLE": "光之引导者",
-        "SS2_UNLOCKABLE_LOG_LAMPBOSS": "日志：远行者",
-        "SS2_LAMPBOSS_BODY_LORE": "小家伙们，集合，在这里听我说。我必须警告你们一些事情。\n\n...\n\n旅者已经返回到这个领域。\n\n很久以前，我制服了他，将他从我们的花园放逐出去。但是现在，他再次威胁着我们的家园。\n\n如果你看到他，不要听从他。他会试图以温暖、安全和力量的承诺来引导你到他的一方。\n\n那是一个陷阱。\n\n一旦他获得了你的信任，你将成为他光明的奴隶。你将背负自己的枷锁，就像他背负自己的一样。\n\n...\n\n但是，不要担心。我会守护这片花园。如果他有胆量回到我面前的话。\n\n至于你们，小家伙们，我为每一个人都准备了一份礼物。靠近一点。\n\n再靠近一点！\n\n现在，看着——看着我的手。\n\n你们都将帮我照料花园。",
+    "SS2_TRADER_QUALITY_BESTEST": "<b>心之所向</b>",
+    "SS2_TRADER_QUALITY_BEST": "<b>优秀</b>",
+    "SS2_TRADER_QUALITY_GREAT": "<b>很好</b>",
+    "SS2_TRADER_QUALITY_GOOD": "<b>好</b>",
+    "SS2_TRADER_QUALITY_MODERATE": "<b>不错</b>",
+    "SS2_TRADER_QUALITY_POOR": "<b>差</b>",
+    "SS2_TRADER_QUALITY_WORTHLESS": "<b>毫无价值</b>",
 
-        "SS2_LAMP_BODY_NAME": "追随者",
-        "SS2_UNLOCKABLE_LOG_LAMP": "日志：追随者",
-        "SS2_LAMP_BODY_LORE": "哦，亲爱的。看看你，可怜的东西。\n\n你冻坏了。\n\n来，现在。你已经经历了这么多。\n\n...\n\n好了。你的火焰已经重燃了。那会让你暖和一点，至少现在是这样。\n\n跟着我。我会把你介绍给其他人。\n\n哦？当然还有其他人。如果你是你种族中唯一的一个，那太残忍了，不是吗？\n\n来吧，现在！别磨蹭。他们会和你分享他们的温暖。跟着我。\n\n在这里，你会安全的。",
+    "SS2_LAMPBOSS_BODY_NAME": "远行者",
+    "SS2_LAMPBOSS_BODY_SUBTITLE": "光之引导者",
+    "SS2_UNLOCKABLE_LOG_LAMPBOSS": "日志：远行者",
+    "SS2_LAMPBOSS_BODY_LORE": "小家伙们，集合，在这里听我说。我必须警告你们一些事情。\n\n...\n\n旅者已经返回到这个领域。\n\n很久以前，我制服了他，将他从我们的花园放逐出去。但是现在，他再次威胁着我们的家园。\n\n如果你看到他，不要听从他。他会试图以温暖、安全和力量的承诺来引导你到他的一方。\n\n那是一个陷阱。\n\n一旦他获得了你的信任，你将成为他光明的奴隶。你将背负自己的枷锁，就像他背负自己的一样。\n\n...\n\n但是，不要担心。我会守护这片花园。如果他有胆量回到我面前的话。\n\n至于你们，小家伙们，我为每一个人都准备了一份礼物。靠近一点。\n\n再靠近一点！\n\n现在，看着——看着我的手。\n\n你们都将帮我照料花园。",
 
-        "SS2_FAMILY_LAMP": "<style=cWorldEvent>[警告]你感到到一种深邃的寂静...</style>",
+    "SS2_LAMP_BODY_NAME": "追随者",
+    "SS2_UNLOCKABLE_LOG_LAMP": "日志：追随者",
+    "SS2_LAMP_BODY_LORE": "哦，亲爱的。看看你，可怜的东西。\n\n你冻坏了。\n\n来，现在。你已经经历了这么多。\n\n...\n\n好了。你的火焰已经重燃了。那会让你暖和一点，至少现在是这样。\n\n跟着我。我会把你介绍给其他人。\n\n哦？当然还有其他人。如果你是你种族中唯一的一个，那太残忍了，不是吗？\n\n来吧，现在！别磨蹭。他们会和你分享他们的温暖。跟着我。\n\n在这里，你会安全的。",
 
-        "SS2_AGARTHAN_BODY_NAME": "雅戈泰",
-        "SS2_UNLOCKABLE_LOG_AGARTHAN": "日志：雅戈泰",
+    "SS2_FAMILY_LAMP": "<style=cWorldEvent>[警告]你感到到一种深邃的寂静...</style>",
 
-        "SS2_RUNSHROOM_BODY_NAME": "突袭菇",
-        "SS2_UNLOCKABLE_LOG_RUNSHROOM": "日志：突袭菇",
-        "SS2_RUNSHROOM_BODY_LORE": "我们惊慌失措地从帐篷中醒来，篷布着火了。我们的设备成了元素周期表的熔融混合物。\n\n“嘿，那边！那个东西！”\n\n它是如此之小，看起来就像是我们鞋底下的一只虫子，然而它造成的混乱......让人别无选择。\n\n“待在这里，我要去把那东西挤成碎片。”\n\n我坐在那里，看着我的队员们像青蛙一样向小蘑菇跳去，甚至连触及它的表面都做不到。咒骂声像空中的警报器一样响起。\n\n我们的努力是徒劳的。我示意队员们回来帮助扑灭火焰。\n\n“安静点，过来！火自己熄不了！这混蛋就像蟑螂，你们抓不到它！”\n\n损失无法弥补。"
+    "SS2_AGARTHAN_BODY_NAME": "雅戈泰",
+    "SS2_UNLOCKABLE_LOG_AGARTHAN": "日志：雅戈泰",
 
-    }
+    "SS2_RUNSHROOM_BODY_NAME": "突袭菇",
+    "SS2_UNLOCKABLE_LOG_RUNSHROOM": "日志：突袭菇",
+    "SS2_RUNSHROOM_BODY_LORE": "我们惊慌失措地从帐篷中醒来，篷布着火了。我们的设备成了元素周期表的熔融混合物。\n\n“嘿，那边！那个东西！”\n\n它是如此之小，看起来就像是我们鞋底下的一只虫子，然而它造成的混乱......让人别无选择。\n\n“待在这里，我要去把那东西挤成碎片。”\n\n我坐在那里，看着我的队员们像青蛙一样向小蘑菇跳去，甚至连触及它的表面都做不到。咒骂声像空中的警报器一样响起。\n\n我们的努力是徒劳的。我示意队员们回来帮助扑灭火焰。\n\n“安静点，过来！火自己熄不了！这混蛋就像蟑螂，你们抓不到它！”\n\n损失无法弥补。",
+
+    "SS2_MIMIC_BODY_NAME": "安全宝箱",
+    "SS2_UNLOCKABLE_LOG_MIMIC": "日志：安全宝箱",
+
+    "SS2_HERO_BODY_NAME": "英雄之影",
+    "SS2_HERO_BODY_SUBTITLE": "堡垒之影",
+
+    "SS2_BIGBROTHER_BODY_NAME": "究极米斯历克斯",
+    "SS2_BIGBROTHER_BODY_SUBTITLE": "重生的毁灭者"
+  }
 }
