--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Skins_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_Skins_zh.json
@@ -1,43 +1,19 @@
 {
-    "strings":
-    {
-        "SS2_SKIN_COMMANDO_GRANDMASTERY": "经典",
-        "SS2_SKIN_TOOLBOT_GRANDMASTERY": "结构体",
-        "SS2_SKIN_HUNTRESS_GRANDMASTERY": "隐蔽",
-        "SS2_SKIN_CROCO_GRANDMASTERY": "武器",
-        "SS2_SKIN_CAPTAIN_GRANDMASTERY": "威望",
-    
-        "SS2_SKIN_COMMANDO_VESTIGE": "隐匿",
-        "SS2_SKIN_MERCENARY_VESTIGE": "Heel",
-    
-        "SS2_SKIN_EXECUTIONER2_DEFAULT": "默认",
-        "SS2_SKIN_EXECUTIONER2_MASTERY": "角斗士",
-        "SS2_SKIN_EXECUTIONER2_ELECTRO": "[NOTRANSLATION]Electrocutioner",
-        "SS2_SKIN_EXECUTIONER2_CLASSIC": "[NOTRANSLATION]Nostalgic",
-    
-        "SS2_SKIN_EXECUTIONER_DEFAULT": "默认",
-        "SS2_SKIN_EXECUTIONER_MASTERY": "义警",
-        "SS2_SKIN_EXECUTIONER_KNIGHT": "角斗士",
-        "SS2_SKIN_EXECUTIONER_WASTELANDER": "废土客",
-        "SS2_SKIN_EXECUTIONER_ELECTRO": "Electrocutioner",
-        
-        "SS2_SKIN_CHIRR_DEFAULT": "默认",
-        "SS2_SKIN_CHIRR_MASTERY": "Moth",
-        "SS2_SKIN_CHIRR_GRANDMASTERY": "Fae",
-        "SS2_SKIN_CHIRR_MAID": "Maid",
-        
-        "SS2_SKIN_BORG_DEFAULT": "默认",
-        "SS2_SKIN_BORG_MASTERY": "Cyberstream",
-        "SS2_SKIN_BORG_GRANDMASTERY": "Metamorphic",
-        
-        "SS2_SKIN_PYRO_DEFAULT": "默认",
-        "SS2_SKIN_PYRO_MASTERY": "",
-        "SS2_SKIN_PYRO_GRANDMASTERY": "",
-      
-        "SS2_SKIN_NEMMANDO_DEFAULT": "默认",
-        "SS2_SKIN_NEMMANDO_MASTERY": "米牛阿诺风",
-        "SS2_SKIN_NEMMANDO_GRANDMASTERY": "经典",
-        "SS2_SKIN_NEMMANDO_COMMANDO": "指挥官",
-        "SS2_SKIN_NEMMANDO_VERGIL": "Motivator"
+  "strings": {
+    "SS2_SKIN_COMMANDO_GRANDMASTERY": "怀旧",
+    "SS2_SKIN_COMMANDO_ALT1": "震撼",
+    "SS2_SKIN_COMMANDO_ALT2": "蝎子",
+    "SS2_SKIN_COMMANDO_ALT3": "长官",
+    "SS2_SKIN_COMMANDO_VESTIGE": "隐匿",
+
+    "SS2_SKIN_HUNTRESS_GRANDMASTERY": "潜影",
+
+    "SS2_SKIN_TOOLBOT_GRANDMASTERY": "构造体",
+
+    "SS2_SKIN_CROCO_GRANDMASTERY": "兵器",
+
+    "SS2_SKIN_CAPTAIN_GRANDMASTERY": "声望",
+
+    "SS2_SKIN_MERCENARY_VESTIGE": "追随者"
   }
 }
