--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorChirr_zh-CN.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorChirr_zh-CN.json
@@ -1,56 +1,55 @@
 {
-    "strings":
-    {
-        "SS2_CHIRR_NAME": "奇尔",
-        "SS2_CHIRR_BODY_NAME": "奇尔",
-        "SS2_CHIRR_BODY_SUBTITLE": "濒危物种",
-        "SS2_CHIRR_DESCRIPTION": "奇尔是一种神秘的生物，与星球及其居民有着及其纯粹的联系。<color=#CCD3E0>\n\n< ! > 在空中悬停时，奇尔能够以极高的速度奔跑，使她在空中具有极高的敏捷性。尽量最大化悬停时间，以保持安全并躲避攻击。\n\n< ! > 抚慰毒液既能治疗盟友又能对敌人造成伤害，使用时尽量将你的朋友或自己放在敌人群中，以最大化技能效果。\n\n< ! > \"净化光环\"可以用来治愈自己和盟友，也可以在空中提供额外的机动性。\n\n< ! > 绑架是一种非常泛用的技能，可用于增强盟友、飞向安全地点、将目标群体聚集在一起，或控制强大的敌人。\n\n< ! >共生链接允许你将生命值低于50%的敌人成为友军，并且它会继承你的物品，且会不断失去生命值，因此用其他技能来保证他们存活是至关重要的。</color>",
-        "SS2_CHIRR_OUTRO_FLAVOR": "...于是她走了，新的生命寄宿于她的心灵。",
-        "SS2_CHIRR_OUTRO_FAILURE": "...于是她消失了，没有人留下来陪她走到最后一刻。",
-        "SS2_CHIRR_LORE": "\"威尔？威尔？听得到吗？\"\n\n\"啊？听得到，什么事？\"\n\n\"在这个星球的众多怪胎里面，我还是发现了一些生物，它不仅没有立即试图杀死我，反而看起来很友好。\"\n\n\"是吗？这听起来不错，它是什么？\"\n\n\"这是……一种虫子？大概吧，我不确定。它看起来确实像某种巨型螳螂，但——\"\n\n\"等等，等等。你说的是巨型螳螂？你觉得它有多大？\"\n\n\"额，等下，给我几分钟…\"\n\n\"...我觉得…大约10英尺长？嗯…大约6英尺高。\"\n\n\"这……这么大？你确定那东西很友好吗？\"\n\n\"哦，那肯定。我在逃离一群黄蜂的时候撞到了它，从我经过的那一刻起，它就开始对它们进行真正的攻击。向它们喷洒针头，痛击那些降落在地上的黄蜂，就这么一直攻击直到黄蜂飞走。有可能是因为领地问题吧，但看起来黄蜂就像讨厌我一样讨厌那东西。\"\n\n\"…好吧，我想如果它能一直保护你的安全，那么无论如何都要保持你遇到它的样子。\"\n\n\"那当然，我会继续与你保持联——啊？有什么不对劲吗，奇尔？\"\n\n\"？等一下，谁是奇尔？\"\n\n\"那是她的名字。就是那螳螂，或者其他什么东西之类的。\"\n\n\"...等一下…\"",
+  "strings": {
+    "SS2_CHIRR_NAME": "奇尔",
+    "SS2_CHIRR_BODY_NAME": "奇尔",
+    "SS2_CHIRR_BODY_SUBTITLE": "濒危物种",
+    "SS2_CHIRR_DESCRIPTION": "奇尔是一种神秘的生物，与星球及其居民有着及其纯粹的联系。<color=#CCD3E0>\n\n< ! > 在空中悬停时，奇尔能够以极高的速度奔跑，使她在空中具有极高的敏捷性。尽量最大化悬停时间，以保持安全并躲避攻击。\n\n< ! > 抚慰毒液既能治疗盟友又能对敌人造成伤害，使用时尽量将你的朋友或自己放在敌人群中，以最大化技能效果。\n\n< ! > \"净化光环\"可以用来治愈自己和盟友，也可以在空中提供额外的机动性。\n\n< ! > 绑架是一种非常泛用的技能，可用于增强盟友、飞向安全地点、将目标群体聚集在一起，或控制强大的敌人。\n\n< ! >共生链接允许你将生命值低于50%的敌人成为友军，并且它会继承你的物品，且会不断失去生命值，因此用其他技能来保证他们存活是至关重要的。</color>",
+    "SS2_CHIRR_OUTRO_FLAVOR": "……于是她走了，新的生命寄宿于她的心灵。",
+    "SS2_CHIRR_OUTRO_FAILURE": "……于是她消失了，没有人留下来陪她走到最后一刻。",
+    "SS2_CHIRR_LORE": "\"威尔？威尔？听得到吗？\"\n\n\"啊？听得到，什么事？\"\n\n\"在这个星球的众多怪胎里面，我还是发现了一些生物，它不仅没有立即试图杀死我，反而看起来很友好。\"\n\n\"是吗？这听起来不错，它是什么？\"\n\n\"这是……一种虫子？大概吧，我不确定。它看起来确实像某种巨型螳螂，但——\"\n\n\"等等，等等。你说的是巨型螳螂？你觉得它有多大？\"\n\n\"额，等下，给我几分钟…\"\n\n\"...我觉得…大约10英尺长？嗯…大约6英尺高。\"\n\n\"这……这么大？你确定那东西很友好吗？\"\n\n\"哦，那肯定。我在逃离一群黄蜂的时候撞到了它，从我经过的那一刻起，它就开始对它们进行真正的攻击。向它们喷洒针头，痛击那些降落在地上的黄蜂，就这么一直攻击直到黄蜂飞走。有可能是因为领地问题吧，但看起来黄蜂就像讨厌我一样讨厌那东西。\"\n\n\"…好吧，我想如果它能一直保护你的安全，那么无论如何都要保持你遇到它的样子。\"\n\n\"那当然，我会继续与你保持联——啊？有什么不对劲吗，奇尔？\"\n\n\"？等一下，谁是奇尔？\"\n\n\"那是她的名字。就是那螳螂，或者其他什么东西之类的。\"\n\n\"...等一下…\"",
 
-        "SS2_KEYWORD_CHIRRBUFF": "<style=cKeywordName>加速</style><style=cSub>增加<style=cIsUtility>移动速度</style>和<style=cIsDamage>攻击速度</style>。</style>",
-		"SS2_KEYWORD_CHIRRSLOW": "<style=cKeywordName>缓速</style><style=cSub>降低<style=cIsUtility>移动速度</style>和<style=cIsDamage>攻击速度</style>。</style>",
+    "SS2_KEYWORD_CHIRRBUFF": "<style=cKeywordName>加速</style><style=cSub>增加<style=cIsUtility>移动速度</style>和<style=cIsDamage>攻击速度</style>。</style>",
+    "SS2_KEYWORD_CHIRRSLOW": "<style=cKeywordName>缓速</style><style=cSub>降低<style=cIsUtility>移动速度</style>和<style=cIsDamage>攻击速度</style>。</style>",
 
-        "SS2_KEYWORD_CHIRRWITHER": "<style=cKeywordName>凋零</style><style=cSub>生命值持续减少",
-        "SS2_KEYWORD_CHIRRWITHER2": "<style=cKeywordName>凋零</style><style=cSub>生命值持续减少，并且受到一部分<style=cIsHealth>永久性伤害</style>.",
+    "SS2_KEYWORD_CHIRRWITHER": "<style=cKeywordName>凋零</style><style=cSub>生命值持续减少",
+    "SS2_KEYWORD_CHIRRWITHER2": "<style=cKeywordName>凋零</style><style=cSub>生命值持续减少，并且受到一部分<style=cIsHealth>永久性伤害</style>.",
 
-        "SS2_BROTHER_KILL_CHIRR": "下去陪你的姐妹吧。",
-        "SS2_BROTHER_KILL_CHIRR2": "总算……灭绝了。",
+    "SS2_BROTHER_KILL_CHIRR": "下去陪你的姐妹吧。",
+    "SS2_BROTHER_KILL_CHIRR2": "总算……灭绝了。",
 
-        "SS2_CHIRR_PASSIVE_NAME": "轻制框架",
-		"SS2_CHIRR_PASSIVE_DESCRIPTION": "奇尔<style=cIsUtility>在空中移动速度更快</style>，<style=cIsUtility>跳的更高</style>并且能够通过按住跳跃键<style=cIsUtility>滑翔</style> 。",
+    "SS2_CHIRR_PASSIVE_NAME": "轻制框架",
+    "SS2_CHIRR_PASSIVE_DESCRIPTION": "奇尔<style=cIsUtility>在空中总是保持奔跑状态</style>，<style=cIsUtility>跳的更高</style>并且能够通过按住跳跃键<style=cIsUtility>滑翔</style> 。",
 
-        "SS2_CHIRR_LEAVES_NAME": "飞叶快刀",
-        "SS2_CHIRR_LEAVES_DESCRIPTION": "发射一阵锋利的剃刀叶，造成<style=cIsDamage>6x75%伤害</style>.",
-        "SS2_CHIRR_SPITBOMB_NAME": "抚慰毒液",
-        "SS2_CHIRR_SPITBOMB_DESCRIPTION": "发射一团包含信息素的液滴，<style=cIsUtility>减速</style>并造成<style=cIsDamage>450%持续伤害</style>，同时<style=cIsHealing>治疗</style>附近的友军",
-        "SS2_CHIRR_GRAB_NAME": "绑架",
-        "SS2_CHIRR_GRAB_DESCRIPTION": "<style=cIsUtility>抓住</style>目标，然后迅速<style=cIsUtility>升空</style>，释放在着陆时造成<style=cIsDamage>1500%范围伤害</style>，范围内友军获得<style=cIsDamage>100%攻击速度</style>.",
-        "SS2_CHIRR_DROP_NAME": "释放",
-        "SS2_CHIRR_DROP_DESCRIPTION": "释放被擒目标，在着陆时造成<style=cIsDamage>1500%范围伤害</style>。",
-        "SS2_CHIRR_BEFRIEND_NAME": "共生链接",
-        "SS2_CHIRR_BEFRIEND_DESCRIPTION": "吐出神经毒素，每秒造成<style=cIsDamage>240%伤害</style>，并和50%生命值以下的目标<style=cHumanObjective>成为朋友</style>，朋友<style=cIsUtility>继承物品</style>并随着时间<style=cDeath>逐渐凋零</style>.",
-        "SS2_CHIRR_BEFRIEND_SCEPTER_NAME": "催眠",
-        "SS2_CHIRR_BEFRIEND_SCEPTER_DESCRIPTION": "吐出神经毒素，每秒造成<style=cIsDamage>240%伤害</style>，并和50%生命值以下的目标<style=cHumanObjective>成为朋友</style>，朋友<style=cIsUtility>继承物品</style>并随着时间<style=cDeath>逐渐凋零</style>. \n<color=#d299ff>权杖：你的朋友在各个阶段之间跟随你，并且不再凋零。</color>",
+    "SS2_CHIRR_LEAVES_NAME": "飞叶快刀",
+    "SS2_CHIRR_LEAVES_DESCRIPTION": "发射一阵锋利的剃刀叶，造成<style=cIsDamage>6x75%伤害</style>.",
+    "SS2_CHIRR_SPITBOMB_NAME": "抚慰毒液",
+    "SS2_CHIRR_SPITBOMB_DESCRIPTION": "发射一团包含信息素的液滴，<style=cIsUtility>减速</style>并造成<style=cIsDamage>750%持续伤害</style>，同时<style=cIsHealing>治疗</style>附近的友军",
+    "SS2_CHIRR_GRAB_NAME": "绑架",
+    "SS2_CHIRR_GRAB_DESCRIPTION": "<style=cIsUtility>抓住</style>目标，然后迅速<style=cIsUtility>升空</style>，释放他们，目标在着陆时造成<style=cIsDamage>1500%范围伤害</style>，范围内友军获得<style=cIsDamage>100%攻击速度</style>。",
+    "SS2_CHIRR_DROP_NAME": "释放",
+    "SS2_CHIRR_DROP_DESCRIPTION": "释放被擒目标，在着陆时造成<style=cIsDamage>1500%范围伤害</style>。",
+    "SS2_CHIRR_BEFRIEND_NAME": "共生链接",
+    "SS2_CHIRR_BEFRIEND_DESCRIPTION": "吐出神经毒素，每秒造成<style=cIsDamage>240%伤害</style>，并和50%生命值以下的目标<style=cHumanObjective>成为朋友</style>，朋友<style=cIsUtility>继承物品</style>并随着时间<style=cDeath>逐渐凋零</style>.",
+    "SS2_CHIRR_BEFRIEND_SCEPTER_NAME": "催眠",
+    "SS2_CHIRR_BEFRIEND_SCEPTER_DESCRIPTION": "吐出神经毒素，每秒造成<style=cIsDamage>240%伤害</style>，并和50%生命值以下的目标<style=cHumanObjective>成为朋友</style>，朋友<style=cIsUtility>继承物品</style>并随着时间<style=cDeath>逐渐凋零</style>. \n<color=#d299ff>权杖：你的朋友在各个阶段之间跟随你，并且不再凋零。</color>",
 
-        "SS2_CHIRR_DETONATE_NAME": "自然链接",
-        "SS2_CHIRR_DETONATE_DESCRIPTION": "<style=cIsUtility>替换特殊技能为：</style>向你的<style=cHumanObjective>朋友</style>发射起爆剂，使其爆炸，造成<style=cIsDamage>1000-4000%伤害</style>，具体取决于他们<style=cHumanObjective>成为朋友</style> 的时间长短",
+    "SS2_CHIRR_DETONATE_NAME": "自然链接",
+    "SS2_CHIRR_DETONATE_DESCRIPTION": "<style=cIsUtility>替换特殊技能为：</style>向你的<style=cHumanObjective>朋友</style>发射起爆剂，使其爆炸，造成<style=cIsDamage>1000-4000%伤害</style>，具体取决于他们<style=cHumanObjective>成为朋友</style> 的时间长短",
 
-        "SS2_SKIN_CHIRR_DEFAULT": "默认",
+    "SS2_SKIN_CHIRR_DEFAULT": "默认",
 
-        "SS2_CHIRR_LEASH_NAME": "自然同步",
-        "SS2_CHIRR_LEASH_DESCRIPTION": "点击召回你的朋友。按住以从你的朋友身上<style=cIsHealth>汲取生命</style>。",
-        "SS2_CHIRR_HEADBUTT_NAME": "头槌",
-        "SS2_CHIRR_HEADBUTT_DESCRIPTION": "<style=cIsUtility>晕眩</style>。向你前方的敌人进行头锤，造成<style=cIsDamage>{0}%的伤害</style>。",
-        "SS2_CHIRR_HEAL_NAME": "净化光环",
-        "SS2_CHIRR_HEAL_DESCRIPTION": "为你和你周围的盟友治疗<style=cIsHealing>{0}% 的最大生命值</style>，并在接下来的一段时间持续额外回复<style=cIsHealing>{1}%</style>。",
+    "SS2_CHIRR_LEASH_NAME": "自然同步",
+    "SS2_CHIRR_LEASH_DESCRIPTION": "点击召回你的朋友。按住以从你的朋友身上<style=cIsHealth>汲取生命</style>。",
+    "SS2_CHIRR_HEADBUTT_NAME": "头槌",
+    "SS2_CHIRR_HEADBUTT_DESCRIPTION": "<style=cIsUtility>晕眩</style>。向你前方的敌人进行头锤，造成<style=cIsDamage>{0}%的伤害</style>。",
+    "SS2_CHIRR_HEAL_NAME": "净化光环",
+    "SS2_CHIRR_HEAL_DESCRIPTION": "为你和你周围的盟友治疗<style=cIsHealing>{0}% 的最大生命值</style>，并在接下来的一段时间持续额外回复<style=cIsHealing>{1}%</style>。",
 
-        "SS2_CHIRRHELPER_NAME": "奇尔的友谊",
-        "SS2_CHIRRHELPER_DESCRIPTION": "有bug的朋友 :)",
+    "SS2_CHIRRHELPER_NAME": "奇尔的友谊",
+    "SS2_CHIRRHELPER_DESCRIPTION": "有bug的朋友 :)",
 
-        
-        "SS2_BEASTMASTER_NAME": "奇尔",
-        "SS2_BEASTMASTER_SUBTITLE": "濒危物种"
-    }
+
+    "SS2_BEASTMASTER_NAME": "奇尔",
+    "SS2_BEASTMASTER_SUBTITLE": "濒危物种"
+  }
 }
