--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorExecutioner_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorExecutioner_zh.json
@@ -30,12 +30,15 @@
     "SS2_EXECUTIONER2_IONBURST_DESC": "<style=cIsDamage>电击</style>。快速释放<style=cIsUtility>离子操纵器充能</style>作为离子子弹，每颗子弹造成<style=cIsDamage>350%伤害</style>",
 
     "SS2_EXECUTIONER2_IONCHARGE_NAME": "离子操纵器",
-    "SS2_EXECUTIONER2_IONCHARGE_DESC": "按住开始充能，最多<style=cIsUtility>10层</style>，并替换你的<style=cIsDamage>主要技能</style>。<style=cIsUtility>击败敌人也会增加充能。</style>",
+    "SS2_EXECUTIONER2_IONCHARGE_DESC": "按住开始充能，最多<style=cIsUtility>5层</style>，并替换你的<style=cIsDamage>主要技能</style>。<style=cIsUtility>击败敌人也会增加充能。</style>",
 
     "SS2_EXECUTIONER2_DASH_NAME": "人群疏散",
     "SS2_EXECUTIONER2_DASH_DESC": "向前推进并<style=cIsUtility>恐惧</style>周边所有敌人。",
 
     "SS2_EXECUTIONER2_IONJUGGERNAUT_NAME": "离子霸主",
-    "SS2_EXECUTIONER2_IONJUGGERNAUT_DESC": "挥动你的离子斧，造成<style=cIsDamage>1700%伤害</style>激活时开始缓慢消耗<style=cIsUtility>离子操纵器充能</style>并生成离子装甲"
+    "SS2_EXECUTIONER2_IONJUGGERNAUT_DESC": "挥动你的离子斧，造成<style=cIsDamage>1700%伤害</style>激活时开始缓慢消耗<style=cIsUtility>离子操纵器充能</style>并生成离子装甲",
+
+    "SS2_EXECUTIONER2_TASER_NAME": "致命电压",
+    "SS2_EXECUTIONER2_TASER_DESC": "向前发射电弧造成<style=cIsDamage>80%伤害</style>，可以在敌人之间<style=cIsUtility>连锁</style>最多<style=cIsUtility>4次</style>。"
   }
 }
