--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorMULE_zh-CN.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorMULE_zh-CN.json
@@ -3,8 +3,8 @@
 		"SS2_MULE_NAME": "MULE",
 		"SS2_MULE_SUBTITLE": "指令：生存",
 		"SS2_MULE_DESCRIPTION": "",
-		"SS2_MULE_OUTRO_FLAVOR": "..于是他走了，指令完成。",
-		"SS2_MULE_OUTRO_FAILURE": "..于是它死了。",
+		"SS2_MULE_OUTRO_FLAVOR": "……于是他走了，指令完成。",
+		"SS2_MULE_OUTRO_FAILURE": "……于是它死了。",
 		"SS2_MULE_LORE": "",
 
 		"SS2_MULE_KEYWORD_OVERCLOCKING": "<style=cKeywordName>超频</style></style=cSub>按住延长技能持续时间，但也会延长技能冷却时间。</sub>",
@@ -30,7 +30,7 @@
 		"SS2_MULE_SPIN_NAME": "扭矩校准",
 		"SS2_MULE_SPIN_DESC": "<style=cIsUtility>超频</style>。快速旋转，逐渐增加<style=cIsUtility>移动速度</style>和<style=cIsUtility>护甲</style>，同时每次旋转造成<style=cIsDamage>100%伤害</style>",
 
-		"SS2_MULE_NET_NAME": "Immobilize",
+		"SS2_MULE_NET_NAME": "禁锢",
 		"SS2_MULE_NET_DESC": "发射一张<style=cIsUtility>网</style>，使距离命中地点<style=cIsUtility>12m</style>内的敌人无法移动，并在<style=cIsUtility>5</style>秒内无法攻击。<style=cIsUtility>飞行中的敌人将被击倒在地</style>.",
 
 		"SS2_MULE_CHARGE_NAME": "扭矩校准",
