--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorNemExecutioner_zh-CN.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorNemExecutioner_zh-CN.json
@@ -1,15 +1,14 @@
 {
-    "strings":
-    {
-        "SS2_NEMESIS_EXECUTIONER_NAME": "复仇处刑者",
+	"strings": {
+		"SS2_NEMESIS_EXECUTIONER_NAME": "涅墨西斯处刑者",
 		"SS2_NEMESIS_EXECUTIONER_SUBTITLE": "死灵摆渡人",
-		"SS2_NEMESIS_EXECUTIONER_DESCRIPTION": "复仇处刑者夺走了那些在政变中丧生的人的生命，但他认为这是更大的福利。\n\n<color=#CCD3E0>< ! > 死亡不会惧怕自己。",
+		"SS2_NEMESIS_EXECUTIONER_DESCRIPTION": "涅墨西斯处刑者夺走了那些在政变中丧生的人的生命，但他认为这是更大的福利。\n\n<color=#CCD3E0>< ! > 死亡不会惧怕自己。",
 		"SS2_NEMESIS_EXECUTIONER_OUTRO_FLAVOR": "..于是他走了，消逝在未知中。",
 		"SS2_NEMESIS_EXECUTIONER_OUTRO_FAILURE": "..于是他回来了，但遗产永远消失了。",
 
-        
-		
+
+
 		"SS2_NEMESIS_EXECUTIONER_IONSUMMON_NAME": "傀儡师",
 		"SS2_NEMESIS_EXECUTIONER_IONSUMMON_DESCRIPTION": "<style=cIsUtility>召唤</style>最多<style=cIsDamage>5个幽灵骷髅</style>，<style=cIsDamage>让它们折磨你的敌人</style>"
-    }
+	}
 }
