--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorNemmando_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_SurvivorNemmando_zh.json
@@ -1,37 +1,37 @@
 {
   "strings": {
-    "SS2_NEMCOMMANDO_NAME": "复仇指挥官",
-    "SS2_NEMCOMMANDO_SUBTITLE": "孤独回声",
-    "SS2_NEMCOMMANDO_DESCRIPTION": "复仇指挥官是战场上的自由人，在任何情况下均能取得优势。\n\n<color=#CCD3E0>< ! >使用止息之刃时需承担受伤风险，但可以靠堆叠凿痕制造大量伤害。\n\n< ! >寒芒可以安全地向大量敌人堆叠凿痕效果，活用其穿刺特性。\n\n< ! >在近战和远程中取得平衡是关键，战术翻滚可以快速切入或撤离战区。\n\n< ! >压制可以提供高额伤害爆发，无论在突袭还是撤退中都能用得上。",
-    "SS2_NEMCOMMANDO_OUTRO_FLAVOR": "……于是他走了，带着他新发现的内在人性。",
-    "SS2_NEMCOMMANDO_OUTRO_FAILURE": "……于是他回去了，结束了他无尽的抗争。",
-    "SS2_NEMCOMMANDO_LORE": "他在炉火旁休息，武器放在他的手旁。他环视着周围，这个洞穴是否能为他提供足够的隐蔽。有人说：过度的谨慎是没用的。他说： <color=#FFCCED>他们看的不够多。</color>\n\n他的那把军用手枪，磨损的恰到好处，被他所深爱着，自他服役以来一直帮他度过难关。有人说：只有傻瓜才相信一把武器。他说：<color=#FFCCED>武器是你唯一能相信的。</color>\n\n牺牲战友的刀刃，是他从他所见过最后一个人类身上挑选出来。有人说：这让战友的灵魂和我们同在。他说：<color=#FFCCED>这让我的灵魂离他们够远。</color>\n\n他的每一件物品都是从别人的货箱中精选而出。有人说：这不是他该拿的。他说：<color=#FFCCED>我是唯一能使用的。</color>\n\n洞穴深处那紫色的光芒平静又温暖。向他招手向他呼唤。有人说：天上不会掉馅饼。他说： <color=#FFCCED>浮士德是个聪明人。</color>",
-    
-    "SS2_KEYWORD_REND": "<style=CKeywordName>撕裂</style><style=cSub>对受到凿痕影响的敌人造成额外伤害",
+    "SS2_NEMMANDO_NAME": "涅墨西斯指挥官",
+    "SS2_NEMMANDO_SUBTITLE": "孤独回响",
+    "SS2_NEMMANDO_DESCRIPTION": "涅墨西斯指挥官是战场上的自由人，在任何情况下均能取得优势。\n\n<color=#CCD3E0>< ! >使用止息之刃时需承担受伤风险，但可以靠堆叠凿痕制造大量伤害。\n\n< ! >寒芒可以安全地向大量敌人堆叠凿痕效果，活用其穿刺特性。\n\n< ! >在近战和远程中取得平衡是关键，战术翻滚可以快速切入或撤离战区。\n\n< ! >压制可以提供高额伤害爆发，无论在突袭还是撤退中都能用得上。",
+    "SS2_NEMMANDO_OUTRO_FLAVOR": "……于是他走了，带着他新发现的内在人性。",
+    "SS2_NEMMANDO_OUTRO_FAILURE": "……于是他回去了，结束了他无尽的抗争。",
+    "SS2_NEMMANDO_LORE": "他在炉火旁休息，武器放在他的手旁。他环视着周围，这个洞穴是否能为他提供足够的隐蔽。有人说：过度的谨慎是没用的。他说： <color=#FFCCED>他们看的不够多。</color>\n\n他的那把军用手枪，磨损的恰到好处，被他所深爱着，自他服役以来一直帮他度过难关。有人说：只有傻瓜才相信一把武器。他说：<color=#FFCCED>武器是你唯一能相信的。</color>\n\n牺牲战友的刀刃，是他从他所见过最后一个人类身上挑选出来。有人说：这让战友的灵魂和我们同在。他说：<color=#FFCCED>这让我的灵魂离他们够远。</color>\n\n他的每一件物品都是从别人的货箱中精选而出。有人说：这不是他该拿的。他说：<color=#FFCCED>我是唯一能使用的。</color>\n\n洞穴深处那紫色的光芒平静又温暖。向他招手向他呼唤。有人说：天上不会掉馅饼。他说： <color=#FFCCED>浮士德是个聪明人。</color>",
 
-    "SS2_NEMCOMMANDO_PRIMARY_BLADE_NAME": "止息之刃",
-    "SS2_NEMCOMMANDO_PRIMARY_BLADE_DESCRIPTION": "<style=cIsDamage>凿痕。</style> <style=cIsUtility>灵巧。</style> 挥砍并造成<style=cIsDamage>160%伤害</style>。",
+    "SS2_KEYWORD_REND": "<style=CKeywordName>凿痕</style><style=cSub>对受到凿痕影响的敌人造成额外伤害",
 
-    "SS2_NEMCOMMANDO_SECONDARY_BEAM_NAME": "寒芒",
-    "SS2_NEMCOMMANDO_SECONDARY_BEAM_DESCRIPTION": "<style=cIsDamage>凿痕。</style> <style=cIsUtility>灵巧。</style> 蓄力，释放一道穿刺剑气，造成至多<style=cIsDamage>400%伤害</style>。",
+    "SS2_NEMMANDO_PRIMARY_BLADE_NAME": "止息之刃",
+    "SS2_NEMMANDO_PRIMARY_BLADE_DESCRIPTION": "<style=cIsDamage>凿痕</style>。 <style=cIsUtility>灵巧</style>。挥砍并造成<style=cIsDamage>160%伤害</style>。",
 
-    "SS2_NEMCOMMANDO_SECONDARY_SHOOT_NAME": "点射",
-    "SS2_NEMCOMMANDO_SECONDARY_SHOOT_DESCRIPTION": "<style=cIsUtility>灵活。</style> <style=cDeath>撕裂。</style> 使用手枪射击造成<style=cIsDamage>150%伤害</style>。",
+    "SS2_NEMMANDO_SECONDARY_CONCUSSION_NAME": "寒芒",
+    "SS2_NEMMANDO_SECONDARY_CONCUSSION_DESCRIPTION": "<style=cIsDamage>凿痕</style>。释放一道<style=cIsDamage>穿透</style>剑气造成<style=cIsDamage>400%伤害</style>。",
 
-    "SS2_NEMCOMMANDO_UTILITY_DODGE_NAME": "战术翻滚",
-    "SS2_NEMCOMMANDO_UTILITY_DODGE_DESCRIPTION": "<style=cIsUtility>翻滚</style>一小段距离，获得<style=cIsUtility>200护盾</style>。",
+    "SS2_NEMMANDO_SECONDARY_SHOOT_NAME": "点射",
+    "SS2_NEMMANDO_SECONDARY_SHOOT_DESCRIPTION": "使用手枪射击造成<style=cIsDamage>150%伤害</style>。一次性重新装填<style=cIsUtility>所有子弹</style>",
 
-    "SS2_NEMCOMMANDO_SPECIAL_SUBMISSION_NAME": "压制",
-    "SS2_NEMCOMMANDO_SPECIAL_SUBMISSION_DESCRIPTION": "<style=cIsUtility>灵巧。</style> <style=cDeath>撕裂。</style> <style=cIsUtility>充能</style>发射至多<style=cIsDamage>6轮射弹，每轮造成6x80%伤害</style> <style=cIsUtility>发射次数随攻击速度提高而增加</style>。",
+    "SS2_NEMMANDO_UTILITY_DODGE_NAME": "战术翻滚",
+    "SS2_NEMMANDO_UTILITY_DODGE_DESCRIPTION": "<style=cIsUtility>向前翻滚</style>一小段距离，暂时获得<style=cIsUtility>200点护甲</style>。最多可储存<style=cIsUtility>2</style>次。",
 
-    "SS2_NEMCOMMANDO_SPECIAL_BOSS_NAME": "破釜沉舟",
-    "SS2_NEMCOMMANDO_SPECIAL_BOSS_DESCRIPTION": "<style=cIsDamage>凿痕。</style> <style=cIsUtility>蓄力</style>，<style=cIsUtility>向前猛冲</style>释放出至多<style=cIsDamage>6道</style>毁灭性斩击，每道造成<style=cIsDamage>360% 伤害</style>。<style=cIsUtility>斩击数量随攻击速度提高而增加</style>。",
+    "SS2_NEMMANDO_SPECIAL_SUBMISSION_NAME": "压制",
+    "SS2_NEMMANDO_SPECIAL_SUBMISSION_DESCRIPTION": "<style=cIsDamage>击晕</style>。每发射击造成<style=cIsDamage>6x80%伤害</style>。 发射次数随攻击速度提高而增加。",
 
-    "SS2_NEMCOMMANDO_SPECIAL_SCEPSUBMISSION_NAME": "Subjunction",
-    "SS2_NEMCOMMANDO_SPECIAL_SCEPSUBMISSION_DESCRIPTION": "<style=cIsUtility>Agile.</style> <style=cDeath>Rending.</style> <style=cIsUtility>Charge up</style>, then fire a barrage of up to <style=cIsDamage>6 blasts of 4x70%.</style>. <style=cIsUtility>The number of shots increases with attack speed</style>. \n<color=#d299ff>SCEPTER: Additionally fires up to {0} lasers which deal {2}% damage.</color>",
+    "SS2_NEMMANDO_SPECIAL_BOSS_NAME": "破釜沉舟",
+    "SS2_NEMMANDO_SPECIAL_BOSS_DESCRIPTION": "<style=cIsDamage>凿痕</style>。<style=cIsDamage>击晕</style>。 <style=cIsUtility>蓄力</style>后<style=cIsUtility>向前猛冲</style>释放出至多<style=cIsDamage>6道</style>毁灭性斩击，每道造成<style=cIsDamage>360%伤害</style>。",
 
-    "SS2_NEMCOMMANDO_SPECIAL_SCEPBOSS_NAME": "次元斩",
-    "SS2_NEMCOMMANDO_SPECIAL_SCEPBOSS_DESCRIPTION": "<style=cIsDamage>Gouging.</style> <style=cIsUtility>Charge up</style>, then <style=cIsUtility>dash forward</style> and unleash a devastating barrage of up to <style=cIsDamage>{0} slashes</style> that deal up to <style=cIsDamage>{1}% damage each</style>. <style=cIsUtility>The number of slashes increases with attack speed</style>. \n<color=#d299ff>SCEPTER: At full charge, briefly vanish, then unleash all of your strikes at once.</color>"
+    "SS2_NEMMANDO_SPECIAL_SCEPSUBMISSION_NAME": "次元交汇",
+    "SS2_NEMMANDO_SPECIAL_SCEPSUBMISSION_DESCRIPTION": "<style=cIsUtility>灵巧。</style><style=cDeath>撕裂。</style><style=cIsUtility>蓄力</style>后进行至多<style=cIsDamage>6发射击，每发射击造成4x70%伤害</style>。<style=cIsUtility>射击次数随攻击速度提高而增加</style>。 \n<color=#d299ff>权杖：额外发射最多{0}道激光，造成{2}%伤害。</color>",
+
+    "SS2_NEMMANDO_SPECIAL_SCEPBOSS_NAME": "次元斩",
+    "SS2_NEMMANDO_SPECIAL_SCEPBOSS_DESCRIPTION": "<style=cIsDamage>凿痕。</style><style=cIsUtility>蓄力</style>后<style=cIsUtility>向前猛冲</style>释放至多<style=cIsDamage>{0}道斩击</style>，每道造成<style=cIsDamage>{1}%伤害</style>。 <style=cIsUtility>斩击次数随着攻击速度增加</style>。 \n<color=#d299ff>权杖：完全蓄力时，短暂消失，然后一次性释放所有攻击。</color>"
 
   }
 }
