--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksArtifacts_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksArtifacts_zh.json
@@ -1,7 +1,9 @@
 {
-    "strings":
-    {
-        "SS2_ACHIEVEMENT_COGNATION_NAME": "衍生试炼",
-        "SS2_ACHIEVEMENT_COGNATION_DESC": "完成衍生试炼。"
-    }
+  "strings": {
+    "SS2_ACHIEVEMENT_COGNATION_NAME": "衍生试炼",
+    "SS2_ACHIEVEMENT_COGNATION_DESC": "完成衍生试炼",
+
+    "SS2_ACHIEVEMENT_HAVOC_NAME": "浩劫试炼",
+    "SS2_ACHIEVEMENT_HAVOC_DESC": "完成浩劫试炼"
+  }
 }
