--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksItems_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksItems_zh.json
@@ -1,32 +1,34 @@
 {
-    "strings":
-    {
+  "strings": {
 
-        "SS2_ACHIEVEMENT_BLOODTESTER_NAME": "医疗兵！",
-		"SS2_ACHIEVEMENT_BLOODTESTER_DESC": "在一轮游戏中治疗5000点生命值。",
+    "SS2_ACHIEVEMENT_BLOODTESTER_NAME": "医疗兵！",
+    "SS2_ACHIEVEMENT_BLOODTESTER_DESC": "在一轮游戏中治疗5000点生命值。",
 
-        "SS2_ACHIEVEMENT_COFFEEBAG_NAME": "含咖啡因",
-		"SS2_ACHIEVEMENT_COFFEEBAG_DESC": "攻击速度加成和移动速度加成达到150%",
+    "SS2_ACHIEVEMENT_COFFEEBAG_NAME": "含咖啡因",
+    "SS2_ACHIEVEMENT_COFFEEBAG_DESC": "攻击速度加成和移动速度加成达到150%",
 
-        "SS2_ACHIEVEMENT_DIARY_NAME": "“今天我又可以写日记了”",
-		"SS2_ACHIEVEMENT_DIARY_DESC": "达到20级。",
+    "SS2_ACHIEVEMENT_DIARY_NAME": "“今天我又可以写日记了”",
+    "SS2_ACHIEVEMENT_DIARY_DESC": "达到20级。",
 
-        "SS2_ACHIEVEMENT_ERRATICGADET_NAME": "粉碎吧！！",
-		"SS2_ACHIEVEMENT_ERRATICGADET_DESC": "携带10个有提高暴击率效果的物品。",
+    "SS2_ACHIEVEMENT_ERRATICGADET_NAME": "雷霆之主",
+    "SS2_ACHIEVEMENT_ERRATICGADET_DESC": "携带5件可以引发闪电的物品。",
 
-        "SS2_ACHIEVEMENT_HOTTESTSAUCE_NAME": "热量混合物",
-		"SS2_ACHIEVEMENT_HOTTESTSAUCE_DESC": "同时携带贾罗的手环、汽油、鬼火",
+    "SS2_ACHIEVEMENT_HOTTESTSAUCE_NAME": "热量混合物",
+    "SS2_ACHIEVEMENT_HOTTESTSAUCE_DESC": "同时携带贾罗的手环、汽油、鬼火",
 
-        "SS2_ACHIEVEMENT_HUNTERSSIGIL_NAME": "狩猎",
-		"SS2_ACHIEVEMENT_HUNTERSSIGIL_DESC": "一次暴击造成1000点以上的伤害。",
+    "SS2_ACHIEVEMENT_HUNTERSSIGIL_NAME": "狩猎",
+    "SS2_ACHIEVEMENT_HUNTERSSIGIL_DESC": "一次暴击造成1000点以上的伤害。",
 
-        "SS2_ACHIEVEMENT_MALICE_NAME": "怀有恶意",
-		"SS2_ACHIEVEMENT_MALICE_DESC": "在台风难度下到达第3关。",
+    "SS2_ACHIEVEMENT_MALICE_NAME": "怀有恶意",
+    "SS2_ACHIEVEMENT_MALICE_DESC": "在台风难度下到达第3关。",
 
-        "SS2_ACHIEVEMENT_NKOTASHERITAGE_NAME": "收集者",
-		"SS2_ACHIEVEMENT_NKOTASHERITAGE_DESC": "携带25种各不相同的物品。",
+    "SS2_ACHIEVEMENT_NKOTASHERITAGE_NAME": "收集者",
+    "SS2_ACHIEVEMENT_NKOTASHERITAGE_DESC": "携带25种各不相同的物品。",
 
-        "SS2_ACHIEVEMENT_STRANGECAN_NAME": "再咬一口",
-		"SS2_ACHIEVEMENT_STRANGECAN_DESC": "在一个敌人身上附加6种不同的减益效果。"
-    }
+    "SS2_ACHIEVEMENT_STRANGECAN_NAME": "再咬一口",
+    "SS2_ACHIEVEMENT_STRANGECAN_DESC": "在一个敌人身上附加6种不同的减益效果。",
+
+    "SS2_ACHIEVEMENT_URANIUMHORSESHOE_NAME": "大奖赛",
+    "SS2_ACHIEVEMENT_URANIUMHORSESHOE_DESC": "在台风难度下，在15分钟前完成第3关。"
+  }
 }
