--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksNemmando_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksNemmando_zh.json
@@ -1,18 +1,18 @@
 {
   "strings": {
-    "SS2_ACHIEVEMENT_NEMMANDO_NAME": "残响",
-    "SS2_ACHIEVEMENT_NEMMANDO_DESC": "击败指挥官的残余。",
+    "SS2_ACHIEVEMENT_NEMMANDO_NAME": "孤独回响",
+    "SS2_ACHIEVEMENT_NEMMANDO_DESC": "击败指挥官的残影。",
 
-    "SS2_ACHIEVEMENT_NEMMANDO_MASTERY_NAME": "复仇指挥官：精通",
-    "SS2_ACHIEVEMENT_NEMMANDO_MASTERY_DESC": "作为复仇指挥官，在季风难度下通关游戏或抹除自己。",
+    "SS2_ACHIEVEMENT_NEMMANDO_MASTERY_NAME": "涅墨西斯指挥官：精通",
+    "SS2_ACHIEVEMENT_NEMMANDO_MASTERY_DESC": "作为涅墨西斯指挥官，在季风难度下通关游戏或抹除自己。",
 
-    "SS2_ACHIEVEMENT_NEMMANDO_GRANDMASTERY_NAME": "复仇指挥官：完全精通",
-    "SS2_ACHIEVEMENT_NEMMANDO_GRANDMASTERY_DESC": "作为复仇指挥官，在台风难度下通关游戏或抹除自己。",
+    "SS2_ACHIEVEMENT_NEMMANDO_GRANDMASTERY_NAME": "涅墨西斯指挥官：完全精通",
+    "SS2_ACHIEVEMENT_NEMMANDO_GRANDMASTERY_DESC": "作为涅墨西斯指挥官，在台风难度下通关游戏或抹除自己。",
 
-    "SS2_ACHIEVEMENT_NEMMANDO_SINGLETAP_NAME": "复仇指挥官：复仇女神的复仇",
-    "SS2_ACHIEVEMENT_NEMMANDO_SINGLETAP_DESC": "作为复仇指挥官，击败指挥官的残影。",
+    "SS2_ACHIEVEMENT_NEMMANDO_SINGLETAP_NAME": "涅墨西斯指挥官：宿敌的宿敌",
+    "SS2_ACHIEVEMENT_NEMMANDO_SINGLETAP_DESC": "作为涅墨西斯指挥官，击败指挥官的残影。",
 
-    "SS2_ACHIEVEMENT_NEMMANDO_BOSSATTACK_NAME": "复仇指挥官：剥夺",
-    "SS2_ACHIEVEMENT_NEMMANDO_BOSSATTACK_DESC": "作为复仇指挥官，用10层或更多的凿痕完成击杀。"
+    "SS2_ACHIEVEMENT_NEMMANDO_BOSSATTACK_NAME": "涅墨西斯指挥官：剥夺",
+    "SS2_ACHIEVEMENT_NEMMANDO_BOSSATTACK_DESC": "作为涅墨西斯指挥官，用10层或更多的凿痕完成击杀。"
   }
 }
