--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksVanilla_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_UnlocksVanilla_zh.json
@@ -3,8 +3,11 @@
     "SS2_ACHIEVEMENT_COMMANDO_GRANDMASTERY_NAME": "指挥官：完全精通",
     "SS2_ACHIEVEMENT_COMMANDO_GRANDMASTERY_DESC": "作为指挥官，在台风难度下通关游戏或抹除自己。",
 
+    "SS2_ACHIEVEMENT_RECOLOR1_COMMANDO_NAME": "指挥官：蝎子",
+    "SS2_ACHIEVEMENT_RECOLOR1_COMMANDO_DESC": "作为指挥官，在巨大平原找到隐藏的棱彩水晶。",
+
     "SS2_ACHIEVEMENT_COMMANDO_NEMESISSKIN_NAME": "指挥官：孤独回响",
-    "SS2_ACHIEVEMENT_COMMANDO_NEMESISSKIN_DESC": "作为指挥官，打败指挥官的残影",
+    "SS2_ACHIEVEMENT_COMMANDO_NEMESISSKIN_DESC": "作为指挥官，击败指挥官的残影。",
 
     "SS2_ACHIEVEMENT_TOOLBOT_GRANDMASTERY_NAME": "多功能枪兵：完全精通",
     "SS2_ACHIEVEMENT_TOOLBOT_GRANDMASTERY_DESC": "作为多功能枪兵，在台风难度下通关游戏或抹除自己。",
@@ -14,11 +17,11 @@
 
     "SS2_ACHIEVEMENT_CAPTAIN_GRANDMASTERY_NAME": "船长：完全精通",
     "SS2_ACHIEVEMENT_CAPTAIN_GRANDMASTERY_DESC": "作为船长，在台风难度下通关游戏或抹除自己。",
-   
+
     "SS2_ACHIEVEMENT_HUNTRESS_GRANDMASTERY_NAME": "女猎人：完全精通",
     "SS2_ACHIEVEMENT_HUNTRESS_GRANDMASTERY_DESC": "作为女猎人，在台风难度下通关游戏或抹除自己。",
 
-    "SS2_ACHIEVEMENT_MERCENARY_NEMESISSKIN_NAME": "雇佣兵：完全精通",
-    "SS2_ACHIEVEMENT_MERCENARY_NEMESISSKIN_DESC": "作为雇佣兵，在台风难度下通关游戏或抹除自己。"
+    "SS2_ACHIEVEMENT_MERCENARY_NEMESISSKIN_NAME": "雇佣兵：复仇的叛逃者",
+    "SS2_ACHIEVEMENT_MERCENARY_NEMESISSKIN_DESC": "作为雇佣兵，击败雇佣兵的残影。"
   }
 }
