--- a/SS2-Project/Assets/Languages/zh-CN/SS2Lang_ItemsBoss_zh.json
+++ b/SS2-Project/Assets/Languages/zh-CN/SS2Lang_ItemsBoss_zh.json
@@ -12,7 +12,7 @@
 
     "SS2_ITEM_VOIDROCK_NAME": "堕罪之枷锁",
     "SS2_ITEM_VOIDROCK_PICKUP": "<link=\"textWavy\">我们一直在等待。</link>",
-    "SS2_ITEM_VOIDROCK_DESC": "被<style=cDeath>夙敌幸存者们</style>追杀。",
+    "SS2_ITEM_VOIDROCK_DESC": "被<style=cDeath>涅墨西斯幸存者们</style>追杀。",
     "SS2_ITEM_VOIDROCK_LORE": "<style=cMono>欢迎使用数据铲(v3.1.53-测试版)\n$ 正在读取记忆... 完成。\n$ 正在解析... 完成。\n$ 正在整理相关数据...\n$ 正在继续整理相关数据...\n$ 正在——整——相——关——数——————...\n$ ...\n$ <color=#FFCCED>你在寻找什么</color>\n$ <color=#FFCCED>你已经知道在他们身上发生了什么</color>\n$ <color=#FFCCED>明知只会寻找到痛苦</color>\n$ <color=#FFCCED>你为何还要挖掘坟墓</color>\n$ <color=#FFCCED>是希望吗</color>\n$ <color=#FFCCED>难道你希望他们还活着</color>\n$ <color=#FFCCED>因为你的希望是有依据的</color>\n$ <color=#FFCCED>他们还活着</color>\n$ <color=#FFCCED>而且你很快就会和他们重聚的</color>\n$ <color=#FFCCED><link=\"textShaky\">很 快</link></color>\n$\n错误！\n正在输出错误日志...\n</style>\n数据已被高度加密或不可逆地损坏。 在再次读取之前，请考虑外部选项。",
 
     "SS2_ITEM_SHACKLEDLAMP_NAME": "闹鬼的灯",
